tests/en/errors/unused_param.salam
// EXPECT: E062
func f(a i32, b i32) i32:
 ret a
end
func main: println(f(1,2)) end
